derive/test/compile_fail/newtype_label.stderr
error: proc-macro derive panicked
 --> compile_fail/newtype_label.rs:3:10
  |
3 | #[derive(Value)]
  |          ^^^^^
  |
  = help: message: unsupported attribute `label` on newtype field
